--- a/index.html
+++ b/index.html
@@ -369,6 +369,15 @@
                 </li>
             </ul>    
         </div>
+        <div class="subs">
+            <p class="subsparagraf">Subscribe</p>
+            <form class="subsform">
+                <label class="subslabel">
+                    <input name="sendmail" type="email" class="subsinput" placeholder="E-mail" >
+                </label>
+
+            </form>
+        </div>
     </div>
 </footer>
 
