--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                 <label class="subslabel">
                     <input name="sendmail" type="email" class="subsinput" placeholder="E-mail" >
                 </label>
-                <button type="submit" class="subsbutton">Subscribe<svg width="24" height="24" class="svgsubs"><use href="./images/icons.svg#icon-inst"></use></svg></button>
+                <button type="submit" class="subsbutton">Subscribe<svg width="24" height="24" class="svgsubs"><use href="./images/icons.svg#icon-sendd"></use></svg></button>
             </form>
         </div>
     </div>
