--- a/index.html
+++ b/index.html
@@ -380,6 +380,11 @@
         </div>
     </div>
 </footer>
+<div class="windcontainer">
+    <div class="window">
+        <button></button>
+    </div>
+</div>
 
 </body>
 </html>
