--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 </footer>
 <div class="windcontainer">
     <div class="window">
-        <button></button>
+        <button type="button" class="windowbutton"></button>
     </div>
 </div>
 
