--- a/index.html
+++ b/index.html
@@ -382,7 +382,11 @@
 </footer>
 <div class="windcontainer">
     <div class="window">
-        <button type="button" class="windowbutton"></button>
+        <button type="button" class="windowbutton">
+            <svg width="8" height="8" class="svgbuttonwindow">
+                <use href="./images/icons.svg#icon-twit"></use>
+            </svg>
+        </button>
     </div>
 </div>
 
