--- a/index.html
+++ b/index.html
@@ -392,9 +392,9 @@
     <form>
         <div class="windformmodal">
             <label class="namewfm" for="user-name">Name</label>
-            <div name="namename">
-                <input id="user-name" name="user-name" type="text" class="inputname">
-                <svg width="18" height="24" class="namesvg">
+            <div class="onediv">
+                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <svg width="18" height="24" class="onesvg">
                     <use href="./images/icons.svg#icon-sendd"></use>
                 </svg>
             </div>
