--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <div class="window">
         <button type="button" class="windowbutton">
             <svg width="8" height="8" class="svgbuttonwindow">
-                <use href="./images/icons.svg#icon-twit"></use>
+                <use href="./images/icons.svg#icon-close"></use>
             </svg>
         </button>
         <p class="modalparagraf"></p>
@@ -394,7 +394,7 @@
             <div class="onediv">
                 <input id="user-name" name="user-name" type="text" class="inputonediv">
                 <svg width="18" height="24" class="onesvg">
-                    <use href="./images/icons.svg#icon-sendd"></use>
+                    <use href="./images/icons.svg#icon-person"></use>
                 </svg>
             </div>
         </div>
