--- a/index.html
+++ b/index.html
@@ -398,6 +398,47 @@
                 </svg>
             </div>
         </div>
+
+        <div class="windformmodal">
+            <label class="namewfm" for="user-name">Phone</label>
+            <div class="onediv">
+                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <svg width="18" height="24" class="onesvg">
+                    <use href="./images/icons.svg#icon-phone1"></use>
+                </svg>
+            </div>
+        </div>
+
+        <div class="windformmodal">
+            <label class="namewfm" for="user-name">Email</label>
+            <div class="onediv">
+                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <svg width="18" height="24" class="onesvg">
+                    <use href="./images/icons.svg#icon-email1"></use>
+                </svg>
+            </div>
+        </div>
+
+        <div class="windformmodal">
+            <label class="namewfm" for="user-comment">Comment</label>
+            <div class="onediv">
+                <input id="user-comment" name="user-name" type="textarea" class="inputonediv">
+                <svg width="18" height="24" class="onesvg">
+                    <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+            </div>
+        </div>
+
+        <div class="windformmodal">
+            <label class="namewfm" for="user-name"></label>
+            <div class="onediv">
+                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <svg width="18" height="24" class="onesvg">
+                    <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+            </div>
+        </div>
+
     </form>
     </div>
     
