--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
         </div>
 
         <div class="windformmodal">
-            <label class="namewfm" for="user-name">Phone</label>
+            <label class="namewfm" for="user-phone">Phone</label>
             <div class="onediv">
-                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <input id="user-phone" name="user-phone" type="text" class="inputonediv">
                 <svg width="18" height="24" class="onesvg">
                     <use href="./images/icons.svg#icon-phone1"></use>
                 </svg>
@@ -410,19 +410,19 @@
         </div>
 
         <div class="windformmodal">
-            <label class="namewfm" for="user-name">Email</label>
+            <label class="namewfm" for="user-email">Email</label>
             <div class="onediv">
-                <input id="user-name" name="user-name" type="text" class="inputonediv">
+                <input id="user-email" name="user-email" type="text" class="inputonediv">
                 <svg width="18" height="24" class="onesvg">
                     <use href="./images/icons.svg#icon-email1"></use>
                 </svg>
             </div>
         </div>
 
-        <div class="windformmodal">
+        <div class="commentwind">
             <label class="namewfm" for="user-comment">Comment</label>
             <div class="onediv">
-                <input id="user-comment" name="user-name" type="textarea" class="inputonediv">
+                <input id="user-comment" name="user-comment" type="textarea" class="inputonediv">
                 <svg width="18" height="24" class="onesvg">
                     <use href="./images/icons.svg#icon-person"></use>
                 </svg>
