--- a/index.html
+++ b/index.html
@@ -432,7 +432,10 @@
          
         <div class="checkwind">
             <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
-            <label for="user-privacy" class="terms">I accept the terms and conditions of the<span class="policy"></span></label>
+            <label for="user-privacy" class="terms">I accept the terms and conditions of the<span class="policy">
+                <svg width="10" height="8" class="policysvg"><use href="./images/icons.svg#icon-email1"></use></svg>
+            </span>
+        </label>
         </div>
         
        <!-- <div class="fivepoint">
