--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <use href="./images/icons.svg#icon-close"></use>
             </svg>
         </button>
-        <p class="modalparagraf"></p>
+        <p class="modalparagraf">Leave your contacts and we will call you back</p>
     <form>
         <div class="windformmodal">
             <label class="namewfm" for="user-name">Name</label>
@@ -434,7 +434,8 @@
             <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
             <label for="user-privacy" class="terms">I accept the terms and conditions of the<span class="policy">
                 <svg width="10" height="8" class="policysvg"><use href="./images/icons.svg#icon-checkmark"></use></svg>
-            </span><a class="pplink" href="https://example.com">Privacy Policy</a>
+            </span>
+            <a class="pplink" href="https://example.com">Privacy Policy</a>
             
             </label>
         </div>
