--- a/index.html
+++ b/index.html
@@ -432,9 +432,9 @@
          
         <div class="checkwind">
             <input id="user-privacy" type="checkbox" value="true" name="user-privacy" class="visually-hidden">
-            <label for="user-privacy" class="terms">I accept the terms and conditions of the<span class="policy">
+            <label for="user-privacy" class="terms"><span class="policy">
                 <svg width="10" height="8" class="policysvg"><use href="./images/icons.svg#icon-checkmark"></use></svg>
-            </span>
+            </span>I accept the terms and conditions of the
             <a class="pplink" href="https://example.com">Privacy Policy</a>
             
             </label>
